force-app/main/default/objects/BRANCH__c/BRANCH__c.object-meta.xml
<CustomObject>
    <label>BRANCH</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRANCHES</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>