force-app/main/default/objects/BRANCH__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <inlineHelpText>Bank name in which the branch is.</inlineHelpText>
    <label>Bank Name</label>
    <referenceTo>BANK__c</referenceTo>
    <relationshipLabel>BRANCHES</relationshipLabel>
    <relationshipName>BRANCHES</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>