force-app/main/default/objects/BRANCH__c/fields/Branch_Contact__c.field-meta.xml
<CustomField>
    <fullName>Branch_Contact__c</fullName>
    <label>Branch Contact</label>
    <type>Phone</type>
</CustomField>