force-app/main/default/objects/BRANCH__c/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <label>Branch Location</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>