force-app/main/default/objects/BRANCH__c/fields/Total_Accounts_in_branch__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts_in_branch__c</fullName>
    <label>Total Accounts in branch</label>
    <summaryForeignKey>ACCOUNT__c.Branch_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>