force-app/main/default/objects/BRANCH__c/validationRules/Branch_name_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Branch_name_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
     REGEX(    Name , &apos;^[A-Za-z- ]+$&apos;) , 

    false, 
 
    true
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Branch name can only have alphabetical characters.</errorMessage>
</ValidationRule>