force-app/main/default/objects/BRANCH__c/listViews/All_Branches.listView-meta.xml
<ListView>
    <fullName>All_Branches</fullName>
    <columns>NAME</columns>
    <columns>Bank_Name__c</columns>
    <columns>Branch_Location__c</columns>
    <columns>Branch_Contact__c</columns>
    <columns>Total_Accounts_in_branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Branches</label>
</ListView>